--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
         <!-- Hero -->
         <!-- Your code here... -->
         <div class="px-4 py-5 my-5 text-center">
-          <img class="d-block mx-auto mb-4" src="./logo.svg" alt="" width="72" height="57">
-          <h1 class="display-5 fw-bold">KOBEEEE!!!!!</h1>
+          <img class="d-block mx-auto mb-4" src="logo.png" alt="" width="572" height="257">
+          <h1 class="display-5 fw-bold">WIN WIN SERVICES</h1>
           <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+            <p class="lead mb-4">Industrial motors and pumps are essential components in many industries, and they are used to move fluids, such as liquids and gases, from one place to another. Industrial pumps are used in a wide range of applications, including agriculture, manufacturing, and energy production. To ensure that your industrial pumps are always operating efficiently, it's important to have an annual maintenance contract in place.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-              <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Swwish</button>
-              <button type="button" class="btn btn-outline-secondary btn-lg px-4">Net</button>
+              <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Sign Up</button>
+              <button type="button" class="btn btn-outline-secondary btn-lg px-4">Know More</button>
             </div>
           </div>
         </div>
@@ -120,16 +120,16 @@
         <!-- Features -->
         <!-- Your code here... -->
         <div class="container px-4 py-5" id="featured-3">
-          <h2 class="pb-2 border-bottom">Columns with icons</h2>
+          <h2 class="pb-2 border-bottom">AMC Services</h2>
           <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
               <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
                 <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
               </div>
-              <h3 class="fs-2">Featured title</h3>
-              <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+              <h3 class="fs-2">Silver</h3>
+              <p>The basic AMC package includes regular inspections, cleaning and lubrication, and replacement of parts if necessary. This package is ideal for businesses on a tight budget who need basic maintenance services to keep their industrial motors and pumps running smoothly.</p>
               <a href="#" class="icon-link d-inline-flex align-items-center">
-                Call to action
+                Know more
                 <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
               </a>
             </div>
@@ -137,10 +137,10 @@
               <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
                 <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
               </div>
-              <h3 class="fs-2">Featured title</h3>
-              <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+              <h3 class="fs-2">Gold</h3>
+              <p>The standard AMC package includes all the services in the basic package, plus emergency repairs in the event of unexpected breakdowns. This package is ideal for businesses that rely heavily on their industrial motors and pumps and cannot afford any downtime.</p>
               <a href="#" class="icon-link d-inline-flex align-items-center">
-                Call to action
+                Know more
                 <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
               </a>
             </div>
@@ -148,10 +148,10 @@
               <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
                 <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
               </div>
-              <h3 class="fs-2">Featured title</h3>
-              <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+              <h3 class="fs-2">Platinum</h3>
+              <p>The premium AMC package includes all the services in the basic and standard packages, plus advanced diagnostic and monitoring services. This package is ideal for businesses that need to maximize the efficiency and lifespan of their industrial motors and pumps and want to identify potential issues before they become major problems.</p>
               <a href="#" class="icon-link d-inline-flex align-items-center">
-                Call to action
+                Know more
                 <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
               </a>
             </div>
